Fix vertical spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -114,6 +114,7 @@ ol#lane-nav {
     text-transform: uppercase;
     font-size: 24px;
     font-weight: 200;
+    margin: 1.7em 0 1em;
 }
 
 @media only screen and (max-width: 767px) {
